[metadata]
name = keli_scoreboard
version = 1.0.1
author = Alexander Greckov
author_email = alexander.greckov@gmail.com
description = An driver implementation for KELI Scoreboards
url = https://github.com/greckov/keli_scoreboard_driver
project_urls =
    Bug Tracker = https://github.com/greckov/keli_scoreboard_driver/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pyserial <= 4

[options.packages.find]
where = src
